<resources>
    <string name="app_name">TraceGPS</string>

    <!-- Texte provisoire pour certains TextView (à modifier par programmation) -->
    <string name="texte_provisoire">Texte provisoire</string>

    <!-- Les titres des activités -->
    <string name="title_activity_main">TraceGPS</string>
    <string name="title_activity_menu">TraceGPS</string>
    <string name="title_activity_creer_utilisateur">TraceGPS</string>
    <string name="title_activity_demander_nouveau_mdp">TraceGPS</string>
    <string name="title_activity_tester_geolocalisation">TraceGPS</string>
    <string name="title_activity_demander_autorisation">TraceGPS</string>
    <string name="title_activity_retirer_autorisation">TraceGPS</string>
    <string name="title_activity_demarrer_enregistrement">TraceGPS</string>
    <string name="title_activity_consulter_parcours">TraceGPS</string>
    <string name="title_activity_supprimer_parcours">TraceGPS</string>
    <string name="title_activity_changer_mdp">TraceGPS</string>
    <string name="title_activity_consulter_utilisateurs">TraceGPS</string>
    <string name="title_activity_supprimer_utilisateur">TraceGPS</string>

    <!-- Les textes de la page d'accueil -->
    <string name="main_titre1">Accueil</string>
    <string name="main_bouton_guide">Petit guide pour débutants</string>
    <string name="main_bouton_creer_compte">Créer mon compte</string>
    <string name="main_creer_compte_saisie_pseudo">Mon pseudo</string>
    <string name="main_creer_compte_saisie_adrmail">Mon adresse mail (obligatoire)</string>
    <string name="main_creer_compte_saisie_numtel">Mon n° de téléphone (facultatif)</string>
    <string name="main_creer_compte_bouton_envoyer">Envoyer</string>
    <string name="main_bouton_connecter">Me connecter</string>
    <string name="main_connecter_saisie_pseudo">Mon pseudo</string>
    <string name="main_connecter_saisie_mdp">Mon mot de passe</string>
    <string name="main_connecter_case_mdp_visible">Afficher le mot de passe</string>
    <string name="main_connecter_case_memoriser_parametres">Mémoriser les paramètres</string>
    <string name="main_connecter_bouton_envoyer">Envoyer</string>
    <string name="main_bouton_mdp_oublie">J\'ai oublié mon mot de passe</string>
    <string name="main_mdp_oublie_message">Pour confirmer que vous souhaitez obtenir un nouveau mot de passe, saisissez votre pseudo.</string>
    <string name="main_mdp_oublie_saisie_pseudo">Mon pseudo</string>
    <string name="main_mdp_oublie_bouton_envoyer">Envoyer</string>
    <string name="main_bouton_quitter">Quitter l\'application</string>

    <!-- Les textes de la page de menu -->
    <string name="menu_titre1">Menu</string>
    <string name="menu_bouton_tester_geolocalisation">Tester la géolocalisation</string>
    <string name="menu_bouton_demander_autorisation">Demander une autorisation</string>
    <string name="menu_bouton_retirer_autorisation">Retirer une autorisation</string>
    <string name="menu_bouton_demarrer_enregistrement">Démarrer enregistrement parcours</string>
    <string name="menu_bouton_consulter_parcours">Consulter un parcours</string>
    <string name="menu_bouton_supprimer_parcours">Supprimer un parcours</string>
    <string name="menu_bouton_changer_mdp">Modifier mon mot de passe</string>
    <string name="menu_bouton_lister_utilisateurs">Consulter la liste des utilisateurs</string>
    <string name="menu_bouton_supprimer_utilisateur">Supprimer un utilisateur</string>
    <string name="menu_bouton_deconnecter">Se déconnecter</string>

    <!-- Les textes de la page de changement du mot de passe -->
    <string name="changer_mdp_titre1">Changer mon mot de passe</string>
    <string name="changer_mdp_bouton_retourner">Retourner au menu</string>
    <string name="changer_mdp_saisie_entrer">Le nouveau mot de passe</string>
    <string name="changer_mdp_saisie_confirmer">Confirmation du nouveau mot de passe</string>
    <string name="changer_mdp_case_mdp_visible">Afficher le mot de passe</string>
    <string name="changer_mdp_bouton_envoyer">Envoyer</string>

</resources>

