<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/tailleMarges"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="haupas.android.tracegps.ChangerMdp">

    <TextView
        android:id="@+id/changer_mdp_textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/changer_mdp_titre1"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/changer_mdp_buttonRetourner"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changer_mdp_bouton_retourner"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/changer_mdp_textViewGuide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texte_provisoire"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/changer_mdp_editTextMdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:hint="@string/changer_mdp_saisie_entrer"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/changer_mdp_editTextConfirmationMdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:hint="@string/changer_mdp_saisie_confirmer"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/changer_mdp_checkBoxMdpVisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changer_mdp_case_mdp_visible"
        android:textSize="14sp" />

    <Button
        android:id="@+id/changer_mdp_buttonEnvoyer"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/changer_mdp_bouton_envoyer"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/changer_mdp_textViewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texte_provisoire"
        android:textSize="14sp" />

    <ProgressBar
        android:id="@+id/changer_mdp_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

</LinearLayout >
